# LeoOpenGL

./: .env.cmake  .gitignore  CMakeLists.txt  LAST  README.md  TODO
cmake_modules/: FindASSIMP.cmake
resources/shaders/: basic.frag.glsl  basic.vs.glsl  bloom-effect.frag.glsl  blur.frag.glsl  cube-map-equirectangular.frag.glsl  cube-map.frag.glsl  cube-map.vs.glsl  deferred-lighting-pbr.frag.glsl  deferred-lighting.frag.glsl  depth_buffer_linear.frag.glsl  depth_buffer_log.frag.glsl  dir-shadow-mapping.frag.glsl  dir-shadow-mapping.vs.glsl  explode.geo.glsl  extract-caped-brightness.frag.glsl  fragment-basic.glsl  gamma-correction.frag.glsl  gbuffer-pbr.frag.glsl  gbuffer-view-space.frag.glsl  gbuffer.frag.glsl  glass.frag.glsl  hdr-cube-map.frag.glsl  hdr-cube-map.vs.glsl  instanced-basic.frag.glsl  instancing.vs.glsl  latlong-convolution.frag.glsl  mirror.frag.glsl  model_loading.frag.glsl  model_loading.vs.glsl  normals.frag.glsl  normals.geo.glsl  normals.vs.glsl  point-shadow-mapping.frag.glsl  point-shadow-mapping.vs.glsl  post-process.frag.glsl  post-process.fragment.glsl  post-process.vertex.glsl  post-process.vs.glsl  reinhard-tone-mapping.frag.glsl  render_alpha.frag.glsl  (+4 more)
src/: CMakeLists.txt  camera.cpp  camera.hpp  debug.hpp  engine.cpp  engine.hpp  global.hpp  input-manager.hpp  main.cpp  opengl-context.cpp  opengl-context.hpp
src/controller/: CMakeLists.txt  event.hpp  observer.cpp  observer.hpp  subject.cpp  subject.hpp
src/material/: CMakeLists.txt  basic-material.cpp  basic-material.hpp  material.cpp  material.hpp
src/model/: CMakeLists.txt  base.cpp  base.hpp  component-manager.hpp  component.cpp  component.hpp  cube-map.cpp  cube-map.hpp  entity-manager.hpp  entity.cpp  entity.hpp  icomponent.cpp  icomponent.hpp  model-loader.cpp  model-loader.hpp  object-register.cpp  object-register.hpp  registered-object.cpp  registered-object.hpp  scene-graph.cpp  scene-graph.hpp  texture-manager.cpp  texture-manager.hpp  type-id.hpp
src/model/components/: CMakeLists.txt  direction-light.cpp  direction-light.hpp  drawable-collection.cpp  drawable-collection.hpp  globals.cpp  globals.hpp  ibl.cpp  ibl.hpp  instanced.cpp  instanced.hpp  light.cpp  light.hpp  material.cpp  material.hpp  pbr-material.cpp  pbr-material.hpp  point-light.cpp  point-light.hpp  scene-object.cpp  scene-object.hpp  transformation.cpp  transformation.hpp  volume.cpp  volume.hpp
src/model/components/types/: CMakeLists.txt  drawable.hpp
src/renderer/: CMakeLists.txt  blit-node.cpp  blit-node.hpp  buffer-collection.hpp  camera.cpp  camera.hpp  cube-map-node.cpp  cube-map-node.hpp  cube-map-renderer.cpp  cube-map-renderer.hpp  cube-shadow-map-node.cpp  cube-shadow-map-node.hpp  debug.cpp  debug.hpp  deferred-lighting-node.cpp  deferred-lighting-node.hpp  engine.cpp  engine.hpp  framebuffer.cpp  framebuffer.hpp  gaussian-blur-node.cpp  gaussian-blur-node.hpp  global.hpp  ibl-node.cpp  ibl-node.hpp  ibl-wrapper.hpp  input-manager.cpp  input-manager.hpp  instanced-node.cpp  instanced-node.hpp  light-uniforms.cpp  light-uniforms.hpp  light-wrapper.cpp  light-wrapper.hpp  main-node.cpp  main-node.hpp  opengl-context.cpp  opengl-context.hpp  post-process-node.cpp  post-process-node.hpp  (+22 more)
src/renderer/scene/: alpha-node.cpp  alpha-node.hpp  cube-map.cpp  cube-map.hpp  drawable-node.cpp  drawable-node.hpp  geometry-node.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp
src/renderer/scene/lights/: direction-light.cpp  direction-light.hpp  light.cpp  light.hpp  point-light.cpp  point-light.hpp
src/renderer/scene/visitor/: CMakeLists.txt  render-visitor.cpp  render-visitor.hpp  transformation-visitor.hpp  visitor.cpp  visitor.hpp
src/renderer/utils/: CMakeLists.txt  framebuffer.cpp  framebuffer.hpp  geometry.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/scene/: CMakeLists.txt  alpha-node.cpp  alpha-node.hpp  cube-geometry.cpp  cube-geometry.hpp  cube-map.cpp  cube-map.hpp  drawable-node.cpp  drawable-node.hpp  geometry-node.cpp  geometry-node.hpp  light.cpp  light.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  node.cpp  node.hpp  point-light.cpp  point-light.hpp  render-visitor.cpp  render-visitor.hpp  transformation-visitor.cpp  transformation-visitor.hpp  visitor.cpp  visitor.hpp
src/scene/lights/: CMakeLists.txt  direction-light.cpp  direction-light.hpp  light.cpp  light.hpp  point-light.cpp  point-light.hpp
src/scene/visitor/: render-visitor.cpp  render-visitor.hpp  transformation-visitor.cpp  transformation-visitor.hpp  visitor.cpp  visitor.hpp
src/utils/: CMakeLists.txt  file-reader.cpp  file-reader.hpp  framebuffer.cpp  framebuffer.hpp  geometry.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
test/: CMakeLists.txt  main.cpp  scene-graph.cpp
